# OpenCLExample

./: CMakeLists.txt  README.md  main.c  vectorAddition
OpenCL/: kernel_inv.cl  shift.cl
src/: gaussianblur.cpp  inv.cpp  main.c  negaposi.cpp  negaposi2.cpp  shift.cpp  vector.cpp
